--- a/tests/Transactions.Api.Test/Transactions.Api.Test.csproj
+++ b/tests/Transactions.Api.Test/Transactions.Api.Test.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+  </ItemGroup>
+
 </Project>
