--- a/src/Transactions.Api/Transactions.Api.csproj
+++ b/src/Transactions.Api/Transactions.Api.csproj
@@ -9,11 +9,9 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.21.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Tansactions.Model\Tansactions.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
